# simplex

./: .codacy.yml  .lgtm.yml  .pylintrc  README.md  dsimplex-gui.py  dsimplex.py  equ.txt  equ4.txt  equ5.txt  equ6.txt  go.mod  pyproject.toml  run_pyinstaller.bat  setup.py  simplex.go  simplex.py  test_regression.py
dsimplex/: args.py  gui.py  result_head.jinja2  result_tail.jinja2  result_template.jinja2  simplex.py  test.py
tests/: equ1.csv  equ1.py  equ2.py  equ3.csv  equ3.py  equ4.csv  equ5.csv  equ5.py  equ6.csv  equ7.csv  equ7.py  equ8.csv  equ8.py  equ9.csv  equ9.py  equ_loop.csv  equ_loop_diff.csv
