[tool.poetry]
name = "simplex"
version = "0.1.0"
description = ""
authors = ["terminaldweller <thabogre@gmail.com>"]
license = "GPLv3.0"
readme = "README.md"
homepage = "https://github.com/terminaldweller/simplex"
repository = "https://github.com/terminaldweller/simplex"
keywords = ["simplex","linear-programming","lp"]
classifiers = [
    "Environment :: Console",
    "Topic :: Linear Programming",
    "Topic :: Simplex",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.4"
scipy = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
