[tool.poetry]
name = "dsimplex"
version = "0.1.11"
description = "A simplex implementation in python"
authors = ["terminaldweller <thabogre@gmail.com>"]
license = "GPL3"
readme = "README.md"
homepage = "https://github.com/terminaldweller/simplex"
repository = "https://github.com/terminaldweller/simplex"
keywords = ["simplex","linear-programming","lp"]
classifiers = [
    "Environment :: Console",
]
include = [
    "LICENSE",
]
packages = [
{include = "dsimplex"}
]

[tool.poetry.scripts]
dsimplex = "dsimplex.simplex:dsimplex"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.4"
scipy = "^1.8.1"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
